# brainfuck-transpiler

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_lexer.py  test_parser.py
transpiler/: lexer.py  nodes.py  parser.py  transpile.py
