[tool.poetry]
name = "transpiler"
version = "0.1.0"
description = ""
authors = ["Kalle Lämsä <1397804+coocos@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
